--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
             <!--Submit button will trigger Ajax call-->
             <input id="add-shows" type="submit" value="submit">
         </form>
-        <div id="shows-view-image"></div>
+        <div id="shows-Gif-appears-here"></div>
 
     </div>
 
     <!-- Optional JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <script src="assets/javascripts/giftastic.js"></script>
+    <script src="assets/javascripts/app.js"></script>
 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 
 
 </body>
